adaptation responsive pages

--- a/GGDemo/src/app/app.component.html
+++ b/GGDemo/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div id="globalView">
-  <app-nav-component></app-nav-component>
+  <!-- <app-nav-component></app-nav-component> -->
   <div id="appContent">
     <router-outlet></router-outlet>
   </div>
