--- a/GGDemo/src/app/contact-us-bande/contact-us-bande.component.html
+++ b/GGDemo/src/app/contact-us-bande/contact-us-bande.component.html
@@ -1,6 +1,8 @@
 <div id="bandeauContainer">
   <div id="bandeau">
-    <p>Pour une réponse à chacun de ces enjeux,&nbsp;</p>
-    <a routerLink="/contact"> nous contacter</a>
+    <p>
+      Pour une réponse à chacun de ces enjeux,&nbsp;
+      <a routerLink="/contact"> nous contacter</a>
+    </p>
   </div>
 </div>
