--- a/GGDemo/src/app/pages/mairie/mairie.component.html
+++ b/GGDemo/src/app/pages/mairie/mairie.component.html
@@ -2,11 +2,13 @@
   <app-titre-bandeau></app-titre-bandeau>
   <div class="GGbandeau">
     que peut faire&nbsp;
-    <p class="GG">GentleGuest</p>
+    <span class="GG">GentleGuest</span>
     &nbsp;pour vous ?
   </div>
   <div class="pageContent2">
-    <img src="../../assets/sucette/Sucette_Mairie.png" alt="" />
+    <div>
+      <img src="../../assets/sucette/Sucette_Mairie.png" alt="" />
+    </div>
     <ul>
       <li>
         <h2>Intégration des Nouveaux Arrivants :</h2>
