--- a/GGDemo/src/app/titre-bandeau/titre-bandeau.component.html
+++ b/GGDemo/src/app/titre-bandeau/titre-bandeau.component.html
@@ -1,4 +1,4 @@
 <div id="globalPageTitle">
-  <p class="GG">GentleGuest</p>
-  , la première apps de géolocalisation de contenu
+  <span class="GG">GentleGuest,</span>
+  la première apps de géolocalisation de contenu
 </div>
