--- a/GGDemo/src/app/home-component/home-component.component.css
+++ b/GGDemo/src/app/home-component/home-component.component.css
@@ -1,15 +1,3 @@
-.pageTitle {
-  position: sticky;
-  top: 70px;
-  font-size: 25px;
-  border-bottom: 2px solid #d8d8d8;
-  border-top: 2px solid #d8d8d8;
-  padding: 20px;
-  font-weight: bold;
-  display: flex;
-  flex-direction: row;
-  background-color: white;
-}
 .pageContent {
   display: flex;
   flex-flow: column;
@@ -19,16 +7,20 @@
 }
 
 article {
-  margin: 30px;
+  margin: 30px 0px;
   font-size: 25px;
   display: flex;
   flex-flow: column;
   justify-content: center;
   padding: 20px;
-  width: 600px;
+  max-width: 600px;
   background-color: white;
   border-radius: 5px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+a {
+  word-break: break-all; /* Permet de couper le lien et de le passer à la ligne */
 }
 
 #metierTitle {
@@ -48,7 +40,7 @@ article {
   width: 80%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 #sucetteContainer > a {
