--- a/GGDemo/src/app/home-component/home-component.component.html
+++ b/GGDemo/src/app/home-component/home-component.component.html
@@ -1,14 +1,14 @@
 <div class="container">
   <app-titre-bandeau></app-titre-bandeau>
-  <div class="pageTitle">Imaginons un évènement mondial :</div>
+  <div class="GGbandeau">Imaginons un évènement mondial :</div>
   <div class="pageContent">
     <article>
       Bonjour ! Découvrez les derniers articles exclusifs de TheNewspaper-Démo
       sur les sites olympiques 2024. Cliquez ici pour explorer votre carte et
       commencez une expérience unique :
-      <a href="https://belletre.ddns.net:3003/#/map/TISS6"
-        >https://belletre.ddns.net:3003/#/map/TISS6</a
-      >. Bonne découverte!
+      <a href="https://gentleguest.ddns.net:3003/#/map/TISS6"
+        >https://gentleguest.ddns.net:3003/#/map/TISS6</a
+      >Bonne découverte!
     </article>
     <img
       src="../../assets/QRCode.png"
@@ -18,7 +18,7 @@
   </div>
   <div class="GGbandeau">
     que peut faire&nbsp;
-    <p class="GG">GentleGuest</p>
+    <span class="GG">GentleGuest</span>
     &nbsp;pour vous ?
   </div>
   <div class="pageContent">
