--- a/GGDemo/src/app/pages/office-de-tourisme/office-de-tourisme.component.html
+++ b/GGDemo/src/app/pages/office-de-tourisme/office-de-tourisme.component.html
@@ -2,11 +2,13 @@
   <app-titre-bandeau></app-titre-bandeau>
   <div class="GGbandeau">
     que peut faire&nbsp;
-    <p class="GG">GentleGuest</p>
+    <span class="GG">GentleGuest</span>
     &nbsp;pour vous ?
   </div>
   <div class="pageContent2">
-    <img src="../../assets/sucette/Sucette_Office_de_tourisme.png" alt="" />
+    <div>
+      <img src="../../assets/sucette/Sucette_Office_de_tourisme.png" alt="" />
+    </div>
     <ul>
       <li>
         <h2>Accès aux informations locales Permanent et Multilingue :</h2>
