--- a/GGDemo/src/app/pages/transport-de-personnes/transport-de-personnes.component.html
+++ b/GGDemo/src/app/pages/transport-de-personnes/transport-de-personnes.component.html
@@ -2,11 +2,16 @@
   <app-titre-bandeau></app-titre-bandeau>
   <div class="GGbandeau">
     que peut faire&nbsp;
-    <p class="GG">GentleGuest</p>
+    <span class="GG">GentleGuest</span>
     &nbsp;pour vous ?
   </div>
   <div class="pageContent2">
-    <img src="../../assets/sucette/Sucette_Transport_de_personnes.png" alt="" />
+    <div>
+      <img
+        src="../../assets/sucette/Sucette_Transport_de_personnes.png"
+        alt=""
+      />
+    </div>
     <ul>
       <li>
         <h2>Stimulation de l'Envie de Voyager :</h2>
